@@ -1,3 +1,8 @@
+2009-06-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.cs: Add a method to download a string and
+	decompress it if necessary.
+
 2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* WebServices.cs: Add support for downloading revision
